tests/sema/negative/duplicate_parameter_name.nv
fn f(x: int, x: int) : void {
    return;
}

fn main() : void {
    return;
}
